@@ -14,9 +14,6 @@ foreach $f (qw(DE ES FR IT PT TR RU JA EN)) {
     $fl = lc($f);
     SYS("copy ldmicro.exe build\\ldmicro-$fl.exe");
 }
-
-#SYS("nmake clean");
-#SYS("nmake D=LDLANG_EN");
 SYS("copy ldmicro.exe build\\ldmicro.exe");
 
 SYS("copy COPYING.txt     build");
@@ -27,3 +24,9 @@ SYS("copy notepad.bat     build");
 SYS("copy readmcu.bat     build");
 SYS("copy flashmcu.bat    build");
 SYS("copy postCompile.bat build");
+
+SYS("mkdir build\\LIBRARIES_FOR");
+SYS("mkdir build\\LIBRARIES_FOR\\ARDUINO");
+SYS("mkdir build\\LIBRARIES_FOR\\ARDUINO\\PwmFrequency");
+SYS("copy  LIBRARIES_FOR\\ARDUINO\\PwmFrequency\\PwmFrequency.h   build\\LIBRARIES_FOR\\ARDUINO\\PwmFrequency");
+SYS("copy  LIBRARIES_FOR\\ARDUINO\\PwmFrequency\\PwmFrequency.cpp build\\LIBRARIES_FOR\\ARDUINO\\PwmFrequency");
